<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme_color">
        <RelativeLayout
            android:id="@+id/back_rl"
            android:layout_width="50dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="17dp"
                android:layout_height="35dp"
                android:background="@drawable/navigationbar_btn_back"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:text="手机信息"
            android:textSize="23sp"/>
    </RelativeLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lv_phone_info"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:background="#f0f0f0"
            android:layout_width="56dp"
            android:layout_height="70dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_phone_cpu"
            android:src="@drawable/icon_phone_cpu"/>
        <TextView
            android:background="#f0f0f0"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:id="@+id/tv_phone_cpu"
            android:paddingTop="30dp"
            android:paddingLeft="12dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:text="CPU"
            android:layout_toRightOf="@+id/iv_phone_cpu"
            android:textColor="#808080"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_phone_cpu_max"
            android:paddingTop="18dp"
            android:paddingLeft="24dp"
            android:paddingBottom="8dp"
            android:paddingRight="24dp"
            android:text="@string/format_phone_ram_max"
            android:layout_toRightOf="@+id/tv_phone_cpu"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:id="@+id/tv_phone_cpu_min"
            android:paddingTop="18dp"
            android:paddingLeft="24dp"
            android:paddingBottom="8dp"
            android:paddingRight="24dp"
            android:text="@string/format_phone_ram_used"
            android:layout_toRightOf="@+id/tv_phone_cpu"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:background="#f0f0f0"
            android:layout_width="56dp"
            android:layout_height="70dp"
            android:padding="12dp"
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_phone_ram"
            android:src="@drawable/icon_phone_ram"/>
        <TextView
            android:background="#f0f0f0"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:id="@+id/tv_phone_info"
            android:paddingTop="30dp"
            android:paddingLeft="12dp"
            android:paddingBottom="12dp"
            android:paddingRight="12dp"
            android:text="内存"
            android:layout_toRightOf="@+id/iv_phone_ram"
            android:textColor="#808080"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:id="@+id/tv_phone_ram_max"
            android:paddingLeft="24dp"
            android:paddingBottom="8dp"
            android:paddingRight="24dp"
            android:text="@string/format_phone_cpu_max"
            android:layout_toRightOf="@+id/tv_phone_info"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:id="@+id/tv_phone_ram_used"
            android:paddingTop="8dp"
            android:paddingLeft="24dp"
            android:paddingBottom="8dp"
            android:paddingRight="24dp"
            android:text="@string/format_phone_cpu_min"
            android:layout_toRightOf="@+id/tv_phone_info"/>
    </RelativeLayout>

</LinearLayout>