<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<GridView-->
    <!--android:id="@+id/gv_main"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:columnWidth="120dp"-->
    <!--android:numColumns="auto_fit"-->
    <!--android:stretchMode="columnWidth" />-->
    <LinearLayout
        android:id="@+id/main_foot_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/tool_kit_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tool_kit_iv"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_horizontal"
                android:clickable="false"
                android:layout_marginTop="@dimen/image_top"
                android:background="@drawable/tab_btn_toolbox"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/tool_kit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_top"
                android:text="@string/tool_kit"
                android:focusable="false"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_manager_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/phone_manager_iv"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/image_top"
                android:background="@drawable/tab_btn_phone"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/phone_manager_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_top"
                android:text="@string/phone_manager"
                android:focusable="false"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/living_helper_ll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/living_helper_iv"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/image_top"
                android:background="@drawable/tab_btn_life"
                android:focusable="false"
                />

            <TextView
                android:id="@+id/living_helper_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_top"
                android:text="@string/living_helper"
                android:focusable="false"
                android:textSize="@dimen/text_size" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/main_foot_ll"
        android:orientation="vertical" >
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_above="@id/main_foot_ll" />
</RelativeLayout>